--- a/client/src/pages/messages/Messages.scss
+++ b/client/src/pages/messages/Messages.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   min-height: calc(100vh - 80px);
   background-color: #f7f7f7;
+  margin-top: 20px;
 
   .container {
     width: 100%;
